--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Ensemble_Models/.ipynb_checkpoints/
 Ensemble_Models/__pycache__/
 Models/.ipynb_checkpoints/
 Models/__pycache__/
+.ipynb_checkpoints/
+
