Stop tracking more CSV files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,12 @@ Ensemble_Models/PEP/financial.csv
 Ensemble_Models/TMUS/TMUS.csv
 Ensemble_Models/NVDA/financial.csv
 Ensemble_Models/PEP/PEP.csv
+Ensemble_Models/GOOGL/financial.csv
+Ensemble_Models/NVDA/NVDA.csv
+Ensemble_Models/EBAY/financial.csv
+Ensemble_Models/GOOGL/GOOGL.csv
+Ensemble_Models/AMZN/financial.csv
+Ensemble_Models/EBAY/EBAY.csv
+Ensemble_Models/AMZN/AMZN.csv
 
 
